--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import seaborn as sns\n",
@@ -102,7 +103,10 @@
     "g = corrplot(\n",
     "    df_wide,\n",
     "    corr_method='spearman',\n",
-    "    diag_kws=dict(kde=False),\n",
+    "    diag_kws=dict(\n",
+    "        kde=False,\n",
+    "        bins=np.linspace(df_wide.values.ravel().min(), df_wide.values.ravel().max(), 50)\n",
+    "    ),\n",
     "    lower_kws=dict(rasterized=True),\n",
     "    diag_sharey=False, height=3\n",
     ")\n",
