--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "import datetime\n",
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
@@ -13,6 +15,7 @@
     "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import FuncFormatter\n",
     "\n",
     "from bioinf_common.plotting import corrplot"
    ]
@@ -39,7 +42,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result_files = snakemake.input\n",
+    "result_files = snakemake.input.result_files\n",
+    "meta_files = snakemake.input.meta_files\n",
     "\n",
     "out_dir = Path(snakemake.output.out_dir)"
    ]
@@ -60,12 +64,14 @@
     "df_list = []\n",
     "for fname in result_files:\n",
     "    tmp = pd.read_csv(fname)\n",
-    "    \n",
+    "\n",
     "    _, tool, _, _ = fname.split('/')\n",
     "    tmp['tool'] = tool\n",
-    "    \n",
+    "\n",
     "    df_list.append(tmp)\n",
-    "df = pd.concat(df_list, ignore_index=True)"
+    "\n",
+    "df = pd.concat(df_list, ignore_index=True)\n",
+    "df.head()"
    ]
   },
   {
@@ -74,7 +80,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "tmp = []\n",
+    "for fname in meta_files:\n",
+    "    with open(fname) as fd:\n",
+    "        meta_data = json.load(fd)\n",
+    "\n",
+    "    _, tool, _, _ = fname.split('/')\n",
+    "\n",
+    "    tmp.append({\n",
+    "        'tool': tool,\n",
+    "        'runtime': meta_data['exec_time']\n",
+    "    })\n",
+    "\n",
+    "df_meta = pd.DataFrame(tmp)\n",
+    "df_meta.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Runtime comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@FuncFormatter\n",
+    "def format_seconds(x, pos):\n",
+    "    \"\"\"Convert seconds to readable timestamp.\"\"\"\n",
+    "    return str(datetime.timedelta(seconds=round(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted_tool_list = df_meta.loc[df_meta['tool'].str.lower().argsort(), 'tool'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 8))\n",
+    "\n",
+    "sns.boxplot(\n",
+    "    x='tool', y='runtime', data=df_meta,\n",
+    "    order=sorted_tool_list)\n",
+    "sns.stripplot(\n",
+    "    x='tool', y='runtime', data=df_meta,\n",
+    "    order=sorted_tool_list,\n",
+    "    linewidth=1)\n",
+    "\n",
+    "plt.xlabel('Tool')\n",
+    "plt.ylabel('Runtime [h:m:s]')\n",
+    "\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.yscale('log')\n",
+    "\n",
+    "plt.gca().yaxis.set_major_formatter(format_seconds)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(out_dir / 'runtime.pdf')"
    ]
   },
   {
