Add correlation clustermap to data analysis

--- a/notebooks/AnalyzeSyntheticData.ipynb
+++ b/notebooks/AnalyzeSyntheticData.ipynb
@@ -11,6 +11,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "from sklearn import preprocessing\n",
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -76,6 +78,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Correlation clustermap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_node_colors = pd.DataFrame({\n",
+    "    'node': df_expr.index,\n",
+    "    'idx': preprocessing.LabelEncoder().fit_transform([n.split('_')[0] for n in df_expr.index])\n",
+    "}).set_index('node')\n",
+    "\n",
+    "pal = sns.color_palette('tab10')\n",
+    "df_node_colors['color'] = df_node_colors['idx'].apply(lambda x: pal[x])\n",
+    "df_node_colors.drop(columns=['idx'], inplace=True)\n",
+    "\n",
+    "df_node_colors.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.clustermap(\n",
+    "    df_expr.T.corr(),\n",
+    "    xticklabels=True, yticklabels=True,\n",
+    "    row_colors=df_node_colors, col_colors=df_node_colors\n",
+    ")\n",
+    "\n",
+    "g.ax_heatmap.set_xticklabels(g.ax_heatmap.get_xmajorticklabels(), fontsize=8)\n",
+    "g.ax_heatmap.set_yticklabels(g.ax_heatmap.get_ymajorticklabels(), fontsize=8)\n",
+    "\n",
+    "g.savefig(out_dir / 'clustermap.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Compare expression levels between conditions"
    ]
   },
@@ -85,9 +130,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# node_selection = np.random.choice(df_expr.index, 1, replace=False)[0]\n",
+    "node_selection = df_expr.index[-1]  # downstream node which should exhibit large effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for condition, group in df_info.groupby('condition'):\n",
-    "    sns.distplot(df_expr[group['sample']].values.ravel(), label=condition)\n",
+    "    sns.distplot(df_expr.loc[node_selection, group['sample']].values.ravel(), kde=False, label=condition)\n",
     "    \n",
+    "plt.title(node_selection)\n",
     "plt.legend(loc='best')"
    ]
   }
