Rename synthetic to expression data

--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -41,6 +41,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "expr_fname='../pipeline_run/data/basic/expression_matrix.csv'\n",
+    "info_fname='../pipeline_run/data/basic/condition_info.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "expr_fname = snakemake.input.expr_fname\n",
     "info_fname = snakemake.input.info_fname\n",
     "\n",
