Make volcano plot symmetric

--- a/notebooks/AnalyzeDEA.ipynb
+++ b/notebooks/AnalyzeDEA.ipynb
@@ -98,6 +98,9 @@
     "plt.axvline(1, color='red', ls='dashed')\n",
     "plt.axvline(-1, color='red', ls='dashed')\n",
     "\n",
+    "xmax = abs(np.asarray(plt.gca().get_xlim())).max()\n",
+    "plt.xlim(-xmax, xmax)\n",
+    "\n",
     "plt.tight_layout()\n",
     "plt.savefig(out_dir / 'volcano_plot.pdf')"
    ]
