--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -166,6 +166,7 @@
    "outputs": [],
    "source": [
     "df_wide = df.pivot(index='term', columns='tool', values='p_value')\n",
+    "df_wide.to_csv(out_dir / 'enrichments.csv')"
     "df_wide.head()"
    ]
   },
