Improve p-value scatterplot

--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -167,6 +167,17 @@
    "source": [
     "df_wide = df.pivot(index='term', columns='tool', values='p_value')\n",
     "df_wide.to_csv(out_dir / 'enrichments.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_wide = -np.log10(df_wide)\n",
+    "\n",
+    "df_wide.reset_index(inplace=True)\n",
     "df_wide.head()"
    ]
   },
@@ -178,16 +189,22 @@
    "source": [
     "g = corrplot(\n",
     "    df_wide,\n",
+    "    #hue='term',\n",
     "    corr_method='spearman',\n",
     "    diag_kws=dict(\n",
     "        kde=False,\n",
-    "        bins=np.linspace(df_wide.values.ravel().min(), df_wide.values.ravel().max(), 50)\n",
+    "        bins=np.linspace(\n",
+    "            np.nanmin(df_wide.select_dtypes(include=np.number).values),\n",
+    "            np.nanmax(df_wide.select_dtypes(include=np.number).values),\n",
+    "            50\n",
+    "        )\n",
     "    ),\n",
-    "    lower_kws=dict(rasterized=True),\n",
+    "    lower_kws=dict(alpha=.5, rasterized=True, edgecolor='none'),\n",
     "    diag_sharey=False, height=3\n",
     ")\n",
     "\n",
-    "g.savefig(out_dir / 'pvalue_scatterplots.pdf')"
+    "#g.add_legend()\n",
+    "g.savefig(out_dir / 'pvalue_scatterplots.pdf', dpi=200)"
    ]
   }
  ],
