Fix bug in node-color association

--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -102,7 +102,7 @@
     "    'idx': preprocessing.LabelEncoder().fit_transform([n.split('_')[0] for n in df_expr.index])\n",
     "}).set_index('node')\n",
     "\n",
-    "pal = sns.color_palette('tab10')\n",
+    "pal = sns.color_palette(palette='tab10', n_colors=df_node_colors['idx'].nunique())\n",
     "df_node_colors['color'] = df_node_colors['idx'].apply(lambda x: pal[x])\n",
     "df_node_colors.drop(columns=['idx'], inplace=True)\n",
     "\n",
