Plot transformed p-values

--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -165,7 +165,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wide = df.pivot(index='term', columns='tool', values='p_value')\n",
+    "df.loc[df['p_value'] == 0, 'p_value'] = np.nan #df.loc[df['p_value'] > 0, 'p_value'].min()\n",
+    "df['pvalue_trans'] = -np.log10(df['p_value'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wide = df.pivot(index='term', columns='tool', values='pvalue_trans')\n",
     "df_wide.to_csv(out_dir / 'enrichments.csv')"
    ]
   },
@@ -175,8 +186,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_wide = -np.log10(df_wide)\n",
-    "\n",
     "df_wide.reset_index(inplace=True)\n",
     "df_wide.head()"
    ]
