Save raw p-values to file

--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -176,8 +176,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wide = df.pivot(index='term', columns='tool', values='pvalue_trans')\n",
-    "df_wide.to_csv(out_dir / 'enrichments.csv')"
+    "df_wide_raw = df.pivot(index='term', columns='tool', values='p_value')\n",
+    "df_wide_raw.to_csv(out_dir / 'enrichments.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_wide = df.pivot(index='term', columns='tool', values='pvalue_trans')"
    ]
   },
   {
