Set comparison scatterplot hue to enrichment strength of pathway

--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -186,16 +186,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_wide = df.pivot(index='term', columns='tool', values='pvalue_trans')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_wide = df.pivot(index='term', columns='tool', values='pvalue_trans')\n",
     "df_wide.reset_index(inplace=True)\n",
+    "df_wide['enrichment'] = df_wide['term'].str.extract('.*\\d+(.*)').fillna('bg')\n",
+    "\n",
     "df_wide.head()"
    ]
   },
@@ -207,7 +201,7 @@
    "source": [
     "g = corrplot(\n",
     "    df_wide,\n",
-    "    #hue='term',\n",
+    "    hue='enrichment', hue_order=['bg', 'weak', 'medium', 'strong'],\n",
     "    corr_method='spearman',\n",
     "    diag_kws=dict(\n",
     "        kde=False,\n",
@@ -221,7 +215,7 @@
     "    diag_sharey=False, height=3\n",
     ")\n",
     "\n",
-    "#g.add_legend()\n",
+    "g.add_legend()\n",
     "g.savefig(out_dir / 'pvalue_scatterplots.pdf', dpi=200)"
    ]
   }
