Improve histograms of generated gene expression values per pathway type

--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
@@ -130,8 +131,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# node_selection = np.random.choice(df_expr.index, 1, replace=False)[0]\n",
-    "node_selection = df_expr.index[-1]  # downstream node which should exhibit large effect"
+    "def get_pathway_type(n):\n",
+    "    match = re.match(r'[a-zA-Z]+\\d+([a-zA-Z]+)_[a-zA-Z]+', n)\n",
+    "    return match.group(1) if match is not None else n.split('_')[0]\n",
+    "\n",
+    "index = pd.MultiIndex.from_tuples([(get_pathway_type(n), n) for n in df_expr.index], names=['pathway_type', 'node'])\n",
+    "df_expr.set_index(index, inplace=True)\n",
+    "df_expr.head()"
    ]
   },
   {
@@ -140,11 +146,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for condition, group in df_info.groupby('condition'):\n",
-    "    sns.distplot(df_expr.loc[node_selection, group['sample']].values.ravel(), kde=False, label=condition)\n",
+    "for pathway, group_expr in df_expr.groupby(level=[0]):\n",
+    "    bins = np.linspace(group_expr.to_numpy().min(), group_expr.to_numpy().max(), 30)\n",
     "    \n",
-    "plt.title(node_selection)\n",
-    "plt.legend(loc='best')"
+    "    plt.figure()\n",
+    "    for condition, group_cond in df_info.groupby('condition'):\n",
+    "        sns.distplot(group_expr[group_cond['sample']].values.ravel(), kde=False, label=condition, bins=bins)\n",
+    "    \n",
+    "    plt.yscale('log')\n",
+    "    plt.title(f'Pathway type: {pathway}')\n",
+    "    plt.legend(loc='best')\n",
+    "    \n",
+    "    g.savefig(out_dir / f'expression_histogram_{pathway}.pdf')"
    ]
   }
  ],
