Fix issues with gene expression histograms

--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -153,11 +153,15 @@
     "    for condition, group_cond in df_info.groupby('condition'):\n",
     "        sns.distplot(group_expr[group_cond['sample']].values.ravel(), kde=False, label=condition, bins=bins)\n",
     "    \n",
+    "    plt.xlabel('Gene expression')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    \n",
     "    plt.yscale('log')\n",
     "    plt.title(f'Pathway type: {pathway}')\n",
     "    plt.legend(loc='best')\n",
     "    \n",
-    "    g.savefig(out_dir / f'expression_histogram_{pathway}.pdf')"
+    "    plt.tight_layout()\n",
+    "    plt.savefig(out_dir / f'expression_histogram_{pathway}.pdf')"
    ]
   }
  ],
