Create individual volcano plot per pathway type

--- a/notebooks/AnalyzeDEA.ipynb
+++ b/notebooks/AnalyzeDEA.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "from pathlib import Path\n",
     "\n",
     "import numpy as np\n",
@@ -57,7 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(dea_fname)"
+    "df = pd.read_csv(dea_fname)\n",
+    "df.set_index('node', inplace=True)"
    ]
   },
   {
@@ -91,18 +93,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(8, 6))\n",
-    "sns.scatterplot(x='log2FoldChange', y='pvalue_trans', data=df)\n",
+    "def get_pathway_type(n):\n",
+    "    match = re.match(r'[a-zA-Z]+\\d+([a-zA-Z]+)_[a-zA-Z]+', n)\n",
+    "    return match.group(1) if match is not None else n.split('_')[0]\n",
     "\n",
-    "plt.axhline(-np.log10(.05), color='red', ls='dashed')\n",
-    "plt.axvline(1, color='red', ls='dashed')\n",
-    "plt.axvline(-1, color='red', ls='dashed')\n",
+    "index = pd.MultiIndex.from_tuples([(get_pathway_type(n), n) for n in df.index], names=['pathway_type', 'node'])\n",
+    "df.set_index(index, inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pathway, group in df.groupby(level=[0]):\n",
+    "    plt.figure(figsize=(8, 6))\n",
+    "    sns.scatterplot(x='log2FoldChange', y='pvalue_trans', data=group)\n",
     "\n",
-    "xmax = abs(np.asarray(plt.gca().get_xlim())).max()\n",
-    "plt.xlim(-xmax, xmax)\n",
+    "    plt.axhline(-np.log10(.05), color='red', ls='dashed')\n",
+    "    plt.axvline(1, color='red', ls='dashed')\n",
+    "    plt.axvline(-1, color='red', ls='dashed')\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(out_dir / 'volcano_plot.pdf')"
+    "    xmax = abs(np.asarray(plt.gca().get_xlim())).max()\n",
+    "    plt.xlim(-xmax, xmax)\n",
+    "    \n",
+    "    plt.title(f'Pathway type: {pathway}')\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(out_dir / f'volcano_plot_{pathway}.pdf')"
    ]
   }
  ],
