--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -79,6 +79,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Count heatmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(df_expr, square=False)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(out_dir / 'count_heatmap.pdf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Correlation clustermap"
    ]
   },
