Improve background node naming

--- a/notebooks/ToolComparison.ipynb
+++ b/notebooks/ToolComparison.ipynb
@@ -188,7 +188,7 @@
    "source": [
     "df_wide = df.pivot(index='term', columns='tool', values='pvalue_trans')\n",
     "df_wide.reset_index(inplace=True)\n",
-    "df_wide['enrichment'] = df_wide['term'].str.extract('.*\\d+(.*)').fillna('bg')\n",
+    "df_wide['enrichment'] = df_wide['term'].str.extract('.*\\d+(.*)')\n",
     "\n",
     "df_wide.head()"
    ]
