--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(8, 6))\n",
-    "sns.heatmap(df_expr, square=False)\n",
+    "sns.heatmap(df_expr, square=False, rasterized=True)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig(out_dir / 'count_heatmap.pdf')"
