--- a/notebooks/AnalyzeExpressionData.ipynb
+++ b/notebooks/AnalyzeExpressionData.ipynb
@@ -129,7 +129,8 @@
     "g = sns.clustermap(\n",
     "    df_expr.T.corr(),\n",
     "    xticklabels=True, yticklabels=True,\n",
-    "    row_colors=df_node_colors, col_colors=df_node_colors\n",
+    "    row_colors=df_node_colors, col_colors=df_node_colors,\n",
+    "    rasterized=True\n",
     ")\n",
     "\n",
     "g.ax_heatmap.set_xticklabels(g.ax_heatmap.get_xmajorticklabels(), fontsize=8)\n",
