Add pathway similarity package data and vignette

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -8,3 +8,9 @@
   year={2009},
   publisher={Oxford University Press}
 }
+@article{simplifyEnrichment,
+    title = {simplifyEnrichment: an R/Bioconductor package for Clustering and Visualizing Functional Enrichment Results},
+    author = {Zuguang Gu and Daniel Huebschmann},
+    journal = {bioRxiv},
+    year = {2021},
+  }
