--- a/vignettes/pathway_similarities.Rmd
+++ b/vignettes/pathway_similarities.Rmd
@@ -6,7 +6,7 @@ graphics: yes
 output: BiocStyle::html_document
 bibliography: bibliography.bib
 vignette: >
-    %\VignetteIndexEntry{Get started}
+    %\VignetteIndexEntry{Pathway similarities}
     %\VignetteEngine{knitr::rmarkdown}
     %\VignetteEncoding{UTF-8}
 ---
